<LinearLayout android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email_login"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/edit_text_size"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_email_grey_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:layout_marginBottom="@dimen/dialog_view_margin"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_view_margin">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:textSize="@dimen/edit_text_size"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_lock_grey_24dp"
            android:drawablePadding="@dimen/drawable_padding" />

        <ImageView android:id="@+id/iv_show_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_visibility_grey_24dp"
            android:layout_gravity="end|center"/>

    </FrameLayout>

    <TextView android:id="@+id/tv_forget_password"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_item_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/login_text_size"
        android:text="@string/forget_password"/>

    <Button android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/register_view_margin"
        android:layout_gravity="center"
        android:text="@string/had_account_login"
        style="?android:borderlessButtonStyle"
        android:textSize="@dimen/edit_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>