<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <EditText android:id="@+id/et_input_email_or_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/please_input_email_or_telephone_number"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true"/>

    <EditText android:id="@+id/et_input_auth_code"
        android:layout_below="@id/et_input_email_or_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/prompt_input_auth_code"
        android:layout_marginTop="@dimen/dialog_item_margin"
        android:layout_alignEnd="@id/et_input_email_or_tel"
        android:visibility="visible"/>

    <Button android:id="@+id/btn_send_auth_code"
        android:layout_marginStart="@dimen/dialog_item_margin"
        android:text="@string/send_auth_code"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/et_input_email_or_tel"
        android:layout_alignBottom="@id/et_input_email_or_tel"
        android:layout_toEndOf="@id/et_input_email_or_tel" />

</RelativeLayout>