<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:elevation="5dp"
    android:background="@color/colorPrimary">

    <EditText android:id="@+id/et_goods_name"
        style="@style/InputEditText"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/goods_name"
        android:layout_marginBottom="@dimen/goods_item_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/goods_item_margin">

        <EditText android:id="@+id/et_goods_low_price"
            style="@style/InputEditText"
            android:layout_width="wrap_content"
            android:inputType="numberDecimal"
            android:minWidth="120dp"
            android:layout_marginRight="32dp"
            android:hint="@string/goods_low_Price" />

        <EditText android:id="@+id/et_goods_high_price"
            android:layout_toRightOf="@id/et_goods_low_price"
            android:layout_alignParentRight="true"
            style="@style/InputEditText"
            android:layout_width="wrap_content"
            android:inputType="numberDecimal"
            android:minWidth="120dp"
            android:hint="@string/goods_high_price"/>
    </RelativeLayout>

    <EditText android:id="@+id/et_note"
        style="@style/InputEditText"
        android:layout_width="match_parent"
        android:maxLines="2"
        android:hint="@string/note_hint"
        android:layout_marginBottom="@dimen/goods_item_margin"/>

</LinearLayout>