<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context=".market.ui.activity.RegisterActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="@dimen/register_head_view_margin"
        android:layout_marginBottom="@dimen/register_head_view_margin"
        android:id="@+id/user_header_picker"
        android:layout_width="@dimen/edit_head_icon_size"
        android:layout_height="@dimen/edit_head_icon_size"
        app:civ_border_color="@color/colorWhite"
        android:layout_gravity="center"
        android:src="@drawable/ic_camera_grey_48dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="@dimen/edit_text_size"
            android:drawableLeft="@drawable/ic_user_name_grey_24dp"
            android:drawablePadding="@dimen/drawable_padding" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/atv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email_register"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/edit_text_size"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_email_grey_24dp"
            android:drawablePadding="@dimen/drawable_padding"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textSize="@dimen/edit_text_size"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_lock_grey_24dp"
            android:drawablePadding="@dimen/drawable_padding"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_register"
        android:textStyle="bold" />


</LinearLayout>