<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_weight="1">

    <RelativeLayout android:id="@+id/head_icon"
        android:paddingTop="@dimen/personal_info_edit_margin"
        android:paddingBottom="@dimen/personal_info_edit_margin"
        android:background="@drawable/edit_item_selected_background"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_activity_icon_height">

        <TextView
            style="@style/PersonalInfoEditTextView"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:text="@string/user_head_icon" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_head_icon"
            android:layout_width="@dimen/edit_head_icon_size"
            android:layout_height="@dimen/edit_head_icon_size"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|center_vertical" />
    </RelativeLayout>

    <View style="@style/EditVerticalDivider" />

    <LinearLayout android:id="@+id/nick_name"
        android:paddingTop="@dimen/personal_info_edit_margin"
        android:paddingBottom="@dimen/personal_info_edit_margin"
        android:background="@drawable/edit_item_selected_background"
        android:clickable="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/tv_user_nick_name"
            style="@style/PersonalInfoEditTextView"
            android:gravity="start"
            android:layout_gravity="start|center_vertical"
            android:text="@string/user_nick_name"/>

        <TextView android:id="@+id/tv_nick_name"
            style="@style/PersonalInfoEditTextView"
            android:textSize="@dimen/personal_info_text_size"
            android:layout_weight="1"
            android:textColor="@color/colorLightDark"
            android:gravity="end"
            android:layout_gravity="end|center_vertical"/>

    </LinearLayout>

    <View style="@style/EditVerticalDivider" />


    <LinearLayout android:id="@+id/email"
        android:orientation="horizontal"
        android:background="@drawable/edit_item_selected_background"
        android:clickable="true"
        android:paddingTop="@dimen/personal_info_edit_margin"
        android:paddingBottom="@dimen/personal_info_edit_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/tv_user_email"
            style="@style/PersonalInfoEditTextView"
            android:layout_gravity="start|center_vertical"
            android:gravity="start"
            android:text="@string/user_email" />

        <TextView android:id="@+id/tv_email"
            style="@style/PersonalInfoEditTextView"
            android:textSize="@dimen/personal_info_text_size"
            android:gravity="end"
            android:textColor="@color/colorLightDark"
            android:layout_gravity="end|center_vertical"/>

    </LinearLayout>

    <View style="@style/EditVerticalDivider" />

    <LinearLayout android:id="@+id/tel_number"
        android:orientation="horizontal"
        android:paddingTop="@dimen/personal_info_edit_margin"
        android:paddingBottom="@dimen/personal_info_edit_margin"
        android:background="@drawable/edit_item_selected_background"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/PersonalInfoEditTextView"
            android:gravity="start"
            android:layout_gravity="start|center_vertical"
            android:text="@string/user_tel_number"/>

        <TextView android:id="@+id/tv_tel"
            style="@style/PersonalInfoEditTextView"
            android:textSize="@dimen/personal_info_text_size"
            android:textColor="@color/colorLightDark"
            android:gravity="end"
            android:layout_gravity="end|center_vertical" />
    </LinearLayout>

    <View style="@style/EditVerticalDivider" />

    <LinearLayout android:id="@+id/introduction"
        android:orientation="horizontal"
        android:paddingTop="@dimen/personal_info_edit_margin"
        android:paddingBottom="@dimen/personal_info_edit_margin"
        android:background="@drawable/edit_item_selected_background"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/PersonalInfoEditTextView"
            android:gravity="start"
            android:layout_gravity="start|center_vertical"
            android:text="@string/user_intro"/>

        <TextView android:id="@+id/tv_introduction"
            style="@style/PersonalInfoEditTextView"
            android:textSize="@dimen/personal_info_text_size"
            android:gravity="end"
            android:textColor="@color/colorLightGrey"
            android:layout_gravity="end|center_vertical"
            android:textColorHint="@color/colorLightGrey"
            android:textColorHighlight="@color/colorLightGrey"
            android:hint="@string/say_something_about_yourself"/>
    </LinearLayout>

</LinearLayout>