<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_view_item_background"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    android:layout_marginBottom="@dimen/card_view_layout_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_item_margin">

            <ImageView
                android:id="@+id/iv_goods_img"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/iv_goods_img"
                android:layout_height="@dimen/card_view_image_size" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="@dimen/card_view_item_margin"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/card_view_title_size"
                android:layout_gravity="start|bottom"
                android:maxEms="8"
                android:ellipsize="end" />

            <TextView android:id="@+id/tv_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/card_view_item_margin"
                android:textColor="@color/colorWhite"
                android:layout_gravity="bottom|end"
                android:text="@string/goods_name"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_favorite_white_24dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/card_view_item_margin">

            <TextView android:id="@+id/tv_publisher_date"
                style="@style/CardViewTextView" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/CardViewTextView"
                android:drawableStart="@drawable/ic_location_grey_24dp"/>

            <TextView android:id="@+id/tv_price"
                style="@style/CardViewTextView"
                android:drawableStart="@drawable/ic_attach_money_grey_24dp"/>

            <TextView android:id="@+id/tv_note"
                style="@style/CardViewTextView"
                android:drawableStart="@drawable/ic_label_grey_24dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_explore_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/card_view_text_size"
            android:text="@string/explore_more"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="@dimen/card_view_item_margin"
            style="?android:borderlessButtonStyle"/>
    </LinearLayout>
</android.support.v7.widget.CardView>